@@ -4,7 +4,8 @@ juxtapo release notes
 0.7		2010		Release:
 					- Refactor of namespaces and Object definitions:
 					  juxtapo.ui.DropDown, juxtapo.ui.Thumbnail, juxtapo.ui.ToolBtn
-					  
+					- Removed specific properties for Thumbnail.image, Thumbnail.caption, Thumbnail.imageContainer
+					
 0.6		2010-04-06	Released:
 					- added namespace juxtapo.plugins as the convention for adding
 					  plugin specific public methods/properties
